--- a/QuanLyPhongTro/Control/ThongTinAdmin.resx
+++ b/QuanLyPhongTro/Control/ThongTinAdmin.resx
@@ -121,26 +121,26 @@
   <data name="btnCapNhatThongTin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
-        swAABLMBSpUGywAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAQvSURBVFhHzZd9
-        bBNlHMd77XVH59p1QPbSqR3ZG3RjcyDCls0pZdjAeIluOtnmHGGyiAO2iQOyYqdAycRllBnIgrAwMSox
-        aozREGMwJi5RiRoT/0BUmDP6h5nRBNQ/4OvvefCa9u6565gj+k0+ee7a3v0+9/R5nruzaGIl8onFM0gO
-        MaWk2iTpE2ox00iS9Da1MmGaXgJb763AUMOaxDzagKHNLQlpvqdSFWlmRcxyUpHla1cifZgSIxFcOX0i
-        IeMvRlSBvbyKSUYddvtVYTERUxSYOH5YFfiY6CDSCGFuisDXQ/2qAMdqlSaonUvoklDg8qEQTrdtQGv5
-        IqwtW4j2wHK8F+oRFlb5KnKAF16Sm4lXt61RRYKsoDamAj8e2ImqXG/0SlyKEt2uK1+CyZeHTQXK8z34
-        66VOzLLLV2n/JKGLoQC78uq8HFglCW2+QpyrX4fxrifw2Y5O1N1Rwguw0Z5I4M/RTiTJtmu0f4IV1MZQ
-        4I32Jn6SjQsK8F1TPYcJTDy7hxPwzWdzHecG9hoKeOe60BEo49sEG4y6GAq0V93FDxx7oFYo8GZbK/8+
-        /MhDOoEvDoXVoio/Ew5CF0OB+rIiKDYbvv2nuFbg855ufvLu9at0AmoPpKa4cWfh9QshWgldDAW6Vlxf
-        zd5fGxAKnGpp5N8Pbmo2FPDlFOOd/g8g22Q2Bo4RuhgKfPTkY5DoJCtvy472gipwMdSL0mwPaBXFN0cH
-        TAXePXgWil1hs2CUV9TEUIDB5j79BpVZGRj1342xTS0YaWpAiSeLfx56+H5dca1AZPsw3yb2EbqYCvw+
-        +DS2VC8F3THVk3AUux3PNNbh8mvHhQJfagYhzZY/qBXeok0FGD+Ee3Bm20YEVy/H4zXVvPCH+4P4aeQF
-        YXGG2gOyPQlKcgr7/xkVrKA2QoFfDvYiVOtHzhx33JVo8dH4YIPwt1eOCQXmlSxF+Mx5SFYrExgkdNEJ
-        nO/rgi8rnZ9gQZob7UXz8RTdAxi7qiqwe6Wf01axjARn899V+grieiRW4PCnk7ArjqkNwsnngyj2ZCCJ
-        5n8/rfWxa4B2GjIu9QWxq8bPV8QVpUXRMREr8NzZS3Q35EvxEK+oSZxAeP19/MD9yxbHFTYSUNlaXcWP
-        O9W9JU7AOScdnrwiVpzt1xC6xAmwrp/ncuICDbQbEbiwZzdcjlkILCrlAt8PD3IBBv3/49RuZsVEiQr8
-        OhCkrrSgsSBXWJxhJMDwF+Yj053KBWKeiIRzPzZRgYv7dvCDOhb6hMUZZgIPlpXS+iBPX4ANQDb4vM4U
-        rPLeKmR1QR5qi31CMpxOZM9Om74A48iGdbg9LRVu+j+FJDvgviVZSG5mOl7fuf3fCSTkxp+K//8C//mL
-        yc1+NWtiRcziomV0jFr1gBmDzvsWtQlfTlnowceSR4hes6eLlzCIxfI3/9PNIpU8lkoAAAAASUVORK5C
-        YII=
+        sgAABLIBmNLkLwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAQ0SURBVFhH1Zd9
+        bBNlHMd/T3vdrXPtOkb20okd2Rt0bxacsGVzShkuMF6im062OUeYLOKAbeKArNgpUDJxGWVGsyAsToxK
+        jBpjNMQYjIlLVKLGxD8QFeaM/mFmNAH1D/ia54Fr2ud6bQMjxm/yTbq2d5/PPfe7W48oMiYiKiSipXPY
+        PIlhmDQzY58REea6jLF3iUiRgXIG+Ze33VONsZa18ftIC8a2dMRt+901mki7DJTzsqooVy4Fh5BQJ4K4
+        dPJ43E6/FNQE9slAOZNWi+WyDmTUBAVmjh3RBD4loh4iSpfBWm6KwLdjwxHzYDKxGSKaL8N54gpcPOzH
+        ya6N6KxagnWeMnQ3rMAH/gEdNLzfBA8KcGV+Nl7fvlYT8clwnpgCPx/chdp8V+hI7Koaet1UVYnZV8d1
+        8HCBqkIn/nmlF8kW5TKfNxnOYyjAj7yuIA8mxtDlLsaZ5vWY7nscX+zsRdPt5QLAp12GywJ/T/YiSTFf
+        IaLjMpzHUOCt7jaxk02Li/BDW7MoF5h5Zq9og3sRv9ZxZmSfoYBrvh09DR5t1fgw6mIo0F17p9hw6v7G
+        qAJvd3WKzwMPP6gT+OpwIHSqrvVXIrLKcB5DgWZPCVSzGd9fg8sCXw70i533b1itE9BWIC3VgTuKrx4I
+        EXXKcB5Dgb6VV+9mH65riCpwoqNVfD66ud1QwJ1XiveGP4JiVvgMHJXhPIYCnzzxKBgRVi3IDa2CJnDe
+        P4iKXCdURcF3L47EFHj/0GmoFpVfBZMynMdQgJdf+3xHNTlZmPTehanNHZhoa0G5M0e873/oPh1cFgju
+        GNdOwX4ZzhNT4M/Rp7C1bhnMjIUPFFSLBU+3NuHiG8d0cN6vpSFkjP1l9C86pgDvT4EBnNq+Cb41K/BY
+        fZ0Af3zAh18mnteB5RVQLElQU1L5+eetluE8UQV+OzQIf6MXeRmOiCOR616QK4bwj9eORhVYWL4MgVNn
+        wUwmLjAqw3l0AmeH+uDOyRQ7WJzuQHfJIjzpKRPdXVuNPau8ol3Vy5GXMU98r8ZdFLEi4QJHPp+FRbUm
+        NoSzz/lQ6sxCktmM4arKiHuAfBnyXhjyYXe9V9wRV1aUhGYiXODZ0xdgMolb8ZgM54kQCGy4V2x4YPnS
+        CLCRgNZtdbViuxP9WyMEbBmZcBaUcDj/u16G80QI8KVfaLfhXGuTDh5L4NzePbBbk9GwpEII/Dg+GpoT
+        ZjJNE9EWGawlJPD7iA+MEVqL8nXgeAK83uJCZDvShEDYL6Ko1354QgLn9+8UG/WUuXXgRAQe8FRAtSjX
+        L8AHkA+fy5aK1a5bo3ZNUQEaS91Rm2WzIXde+vUL8L6wcT1uS0+Dw5ocvSlWOG5Jidr87Ey8uWvHjQnE
+        bYI/Sv9XAv/5g8nNfjRrk4Fy7IyxKe2mMZdljL2TyMMpDyOigiiP2DdSlwwJz7//080irdN7MgAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
 </root>
