--- a/QuanLyPhongTro/Control/ThongTinPhong.resx
+++ b/QuanLyPhongTro/Control/ThongTinPhong.resx
@@ -132,59 +132,60 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnUpdate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAABLgAAAS4AcOmL8MAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADV0lEQVRYR+2WW0hUURSG56KpY2hq3lJTjNQCnUzMSh9SoxejILqHQlIkGASZZpFlERGlL5JdoMKQ
-        oGg0y7AsvKSSGDqWD2ZGI1om9VJvRThn9a+jY8fNxksYIvjDx/ac2e5vzTn7Mrr5zJX4gyxQDmrBI1AE
-        koEB/Lc4g/N6vf4nWlrg4mL3Dwoa9vT2GuZrBp9Z0SaAGY87Bm9AS7Hr1ynF9+5SXf9HahzsV7F0tNHB
-        /DxyM5ns6Pcb/Y6AUp1e320wGH7gng3XN4EZ/FMsQJU4pDJqrO0UHBZm576Q0spVZiV1cxqZ4+PJaDQq
-        uM+cBtPKFkDbD2RKpVqs34aotquTsvJyydL8Ur128KTjNcUnJXEB/LpyeOCpptnDa9Hw095uqVSLViij
-        7fMARcfFKXqD4RfGDR4ZfuL4APvWjHSpUEQmFSmrqVYnLMhnwWSJB5RbdEkqFJEJRTq+fiEPT0+eJxWq
-        YZJsAnTmeqlUKCITyggICuIC6lTDBNmDmfwJLRWUlkiFIjKZDCxXBWN/x9g7VJMkxwEtCQ21H714geoH
-        bFKhFt4brlnuS4UixWW3KTA4WF2u4CQLteEtVVmdlKg8+/BOKhO5UlVBBqORsOnQjUqLVCrSOtCHZZno
-        2BtSWKwGj6aBd7SqLqtUJlJS+YDc3N3JyclJxYS/bz2ukkpFGt53c3/ePcfmgwsu7Gl7d0tlIvzNTQvd
-        yWuxD4VFLKdlUZHkGxBArm5uU34S29L38Wvg1+HKBUQByi4skAq1aOVl9S8oIiaaVphjqPJVy7SKyDl3
-        1rEvsFu3lC8yc3OkUgflTQ3qY/f286U7jXXqPUcBPGhFSxP5+Pmpr4MLEqVaDuUecxQQwgXosU0ORZpj
-        FFGqhaVrU5LH5Iy2AIaLSNqYqrZaoQj+R8HkHWQ3F8ApBJRXfHmcdDLEAqbCqeIix7cfd0Ly2d+FZaXw
-        8fvc1isVikynAF6C2Sfy1SMaT/wtnKYR9d8EoohWtOSKJRmTsIYSUjbQ1eoqqZyZrAA+hBJTUyh2bQLm
-        j0k9luFoQRvAQln4990u8BAde/CebNjDM5r7+71kYA/odHJ2fmMdGvKVERIevh9PtQ/j9GDMSrBz1DFj
-        aR9l1jJfwKwXcHiU+czV6HR/APsCaAVAbUM0AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
+        sgAABLIBmNLkLwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANySURBVFhH7ZZv
+        aFVlHMe/v+fcud1zxTXX5tU7cyj+Be/V5DZ194Vu0RulICz/hIKSKBgErc0V+aeICN3eiNOCioUERXdr
+        pVgmc+pGorir7sXSRZOtbNSbeqfI7vnJ77Qzbs/zaBMGIuwLHy7ncu75fM95nvs8B5jIY5JpAHYCOAbg
+        FIBvATQAWA1A6SePZ/IAvE9EtwHwpPz87LRYbLhwatGwHAtElAFQof9wPBIhog6RLF25wmv88gtuH/iV
+        z94a8El3X+Tt9XUcdt0sEd0F8DqAJhD1KqX+IaJ+AJ8ASOgXHmvSIhdJILVxMnOZy8rLsyNPgxctSXjV
+        a9dwIplkx3E8AMJe/eL/l+flgute3WYIdTJ/DfGpniu8s66W053n/OOAE92XOJlKSQEZrhpd8qB0Til6
+        Yvj7vl5DqJMrtHHx90FevGyZR0rdAVCmi2wpBpB9YctmQ2ZDF9poPnncn7AA6nWZLUk5ubbhgCGzocts
+        dP/5B08pLJR50qLLbHlOCuz7qMmQ2dBl9yMai0mBdl2mZyMR/SYF9jQdMmQ2dNH9CLuuR0R/A3hJlwbZ
+        LeIZs2Zl3/jwAz4z2G/IdGRtOJr+ypDZaGz+jKeXlfl/VwBv63JZUr2nU5XeD7/8bIhsHG5rYeU4rJTi
+        j1vThtDGhcGbnExVBmtD1ahdVjxZ0dp6MobIxqHWrzkciXAoFPJxIxH+9Ls2Q2ij40avnC+r5+h8yCei
+        7JpNGwyRDblzd3KEi54s5vJ5c3nOgvlcEo1yQTg85ifx4uZXZBhkOAqkwAIZl1379xgynVx585nTPC++
+        mBcm4tz6U9dDlah5791gXRA3npKDbbU1hjCXY+c7/Mc+tbSEPz/b7n8XFJCLtnSd5+LSUn84pJAuzWVH
+        7ZtBgZn/TgGlhuYn4p4uzUWky6tWj8r1AkGJ1LPV/qcuzWVhIu4ppW6JO5gH+6VRXeNBQ/wg9AJj4Z3G
+        huDu/7NDyt7foxzHk+33x/4+Q2bjYQrIX3DXW/X+Fk1KXQPg5haQTCeiC9KuwHWz8YpnuKJqFR853maI
+        x1pANqHK6ipeuryCwxHX35aJqAtAVJcHkfe79QC+IaLrSqn+aCy2pXNgoMhGKBS6EsrLu5oZGiqxMXP2
+        7K3KcW4qpa4DaAXw8ni/Q14e4ZFlosAjL/DaCBN5fHMP+wJoBdE5gQ0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="buttonLuu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
+        sgAABLIBmNLkLwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANySURBVFhH7ZZd
+        aBRXGIbf7+zGNRNIjG0x6W5UgvgTyG5V1liTC43QG0sL4l+VCIqlgVwUTBOjaE2LSqlZL8SIoKgoFpG0
+        KtH4AzaGtIaE7NrmIk3TdsNG7aIgeqdIdo58050Qz5lk6xoDgi88kJnszvPOnjPnDPA2b0imAagEcBrA
+        NQAXATQAWAZAqB8ez2QA2ENETwDISR5PYprXO5QzNXeIjxkiigAoUb84HskiolaWzF/yoRk6e0beiP0j
+        b96LWTSFO+XndbUy0zASRPQMwJcAGkHUK4R4TERRAMcABNQL/980sZwlttSJlki39M2cmUj+GrLog4C5
+        /OMVMhAMSpfLZQJgvlYvniqf8AVXbdmsCVUiD+LyWs9tWVlbI5va26xjm0vhLhksK+MCPFzVqmSstGfn
+        Thm60t+rCVVGCp3ovDsoixcuNEmIpwB8qsgp7wBIfLqxQpM5oQqdONnSbE1YAHWqzClB/nBNw/eazAlV
+        5kT4/r8yOyeH58mPqswpH3GB3UcaNZkTqmw08rxeLnBDlan5jIjucIFdjQc1mROqaDQyDcMkokcAVqtS
+        O9tY/P6MGYmt3+2TPw9GNZnKmV/b5MXOW5rMidDJ4zLf57MeVwA7VDkvqeaCslLz6l9/aKLR8JcskvMX
+        l2iy0egYHJDBslJ7bSgftvOKxyvahZ6IJhmL2f5iOS/g10Rj0fpnrzSysnj1HJ4PHiJKrFi/ThOkIp0C
+        zMqKDTwMPByTucBcHpeq+l2aIBXpFqj+9ht7XWA3pvPB5ppqTZCKdAt8UfOVXaDgvykgRHxOwG+qglSk
+        W2BewG8KIe6x254H9dyoNrRfk4xFOgV2hhrsu39hh+S9v0e4XCZvv9ej/ZrMiZcpwI9g1fY6a4smIX4H
+        YIwswMknog5uN9kwEvyMl5QvlYebL1iyq3/3yb3Hj76wQKkFuuN35YFTJ+StWNQ65k2odHm5tVZkZhnW
+        tkxEvwDIU+V2+P1uLYDzRNQnhIjmeb0b22OxXF9h4Uq+gMfjafqhtfVdPud2u2+7MzJ+i8Tj713u6srL
+        NAzebOSsoqLVfK6gsHCTcLkGhBB9AH4CsOZV3iF5whxKjt85AG4A3UlcyRdW/t/RV5GkiloinGRC5Ha4
+        xJGk8GES/pvPDT9Wrzsjf4kJu3M1XKIlyYTd+duMe54DcJ2ak2B2LO4AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnQuayLai.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
-        uAAABLgBw6YvwwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIMSURBVFhHYxgF
-        o2CoAUYgrmZiZHwGpHvBInQEnEC8HIj/87Cx/gfS/4BYBIjpAiSBXj8FpP+nm2r+r3MwAjkAhJVAkrQG
-        hsAgfwrE//o9LP9/qUn83+RkQjcHBAEt/gYM8r9rI1zBltPLAaDEVgMk/snx8/w9nR4ItxzNAUZALEQG
-        ZgNinIADiBcD8X9LWfF/D4siUSwH4RZnuAPIwkCP/QLS1UCMAUSAkseB9P9YfdX/7yrjMSwH4Vv54f8r
-        bQ3+l1jrkYXNZMRADgHlIimQpTCgB4zv+4zAxNbhaobVYmrhSV5WsNAwBtsMBD5Ay79ys7L8XRXuglUT
-        NTG6A0SBvv4hC0xsJzND/n9pSKM5nuRri+oAoO9/ygoJ/DvXVPj/6+x2muPJsYEoDgABcBTwcrD/3ZCf
-        iFUTNTE2B4CAHjMT02OgQ/61h3lj1UgtjMsBICAOdMBZIP0/xd78/4cZLVgNuN1d+b/S1/l/iZcDWdhc
-        WQ5kOUY2hAEuIF4FxP8dNJT/PZlQi+GA1hBPmA/IwsBE/xNIVwExTgAqikEl1T8lMeF/F5qLUBzQHOwB
-        M4wmRTEyiABGyQ9+To6/mwuTsDmALtWxGTMT40tgAv03LT54QBwAAjLAkDgPpP9nOFn+rw9wo7sDQIAb
-        iNcC8X8eDnaQ5XRtksEAExBXA6PkKZDuAYuMglEwtAEDAwB4DP+bU4uH1wAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="buttonLuu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAABLgAAAS4AcOmL8MAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADV0lEQVRYR+2WbUhTURjHtzmbTtDsBTVnikQvgi6TZaUfSqEvRoFkrygkRYIfgkyzyLKoiNI+RIZg
-        mBRGhJVimQa2xFIUN8sPZlaTmTYKor4V4e7T/7k6m5fjzKFC4B9+XM/Z9fye+3LOuar5/C8JATngDmgC
-        daAEbAEaMGvxBefVavVPHGmBTucMCQ8fCVoUPMJtBr9ZcUwEM54ADG7GkeI3bZRK71VTs/0jvRi2y9RY
-        OuhQYQH56/VOnPcb5x0BZSq1ulej0fxAnw3tm8AIvEoNkCUuqYgGaxcZoqKcfC6kFLPWKKVuSyOjyUQ+
-        Pj4S+pnTYFrZDmjnwWyh1B3rVwc19XRTTkE+1bS2yG0Xjy2dZEpO5gL4ceXxwP+a1sDghSNP+3uFUnfc
-        hSI6hgYpNiFBUms0vzCuYXR4z1kMnDuyMoVCJSKpkqqGevmFBYUsmComQPkll4VCJSKhEsuXzxQYFMTv
-        yQPZMEW2AjpTXiYUKhEJRYSGh3MBzbLBQ/biTf6EIxWVXRMKlYhkIjBdJYz9HWNnyCZBjgNaFhnpPHrp
-        Ij0ftAmF7lS/aqG6jjahUElpVSWFGQzydAUnWegeXlKldclJUuP7t0KZiLjE9RS/IVEoFNE+OIBpmeRa
-        G1JYLAe3xswrWm2PVSiajJVxsbTGGCeUTYb5XS/pAwJ49Rx/H3RoONP27RFKPOFNAUx65n5+DPw4/LiA
-        1YByi4uEEk94W0DeubOudYHdquXcyM7PE0o84W0Bh/OPuQqI4ALUWCYdq4xxkkjiCW8LwP9I2DGH2c0F
-        cIoBFZReEYomw5sCTpWWuK5+wg7Je3+PBtsnb7/PbP1CoZLpFMBTMPdEobxF446/gVM/qv6bMBTRjiP5
-        YUryHE9M2Uw36mtlWeOHPrpQWTFhgVIW0OUYoqu3b1Gb3Sa3eRNKSk2R1wr/AL28LcPxEsdQForC33e7
-        wSOc2IfnZMMantVqtwcboqPT0U86na7mrtm8hPu0Wm231tf3tdXhWPqkszMUawlvNrQiJiaD+yKiow/g
-        rg5gnD70PwS7gNffkPzCXAf8/O4DLegawwfwByv/VgFm7UNVWYRljDmRu8JFlAMWfhuD/+a+8Wk123G/
-        E3N25cpwEQ1jzNmVz2eGo1L9AXCdmpPWZCEsAAAAAElFTkSuQmCC
+        sgAABLIBmNLkLwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIXSURBVFhH7ZbP
+        SxRhHMaf5912XXNiw0wpXA9KUJc1rVa2kBbNMEvIlLSDiCGZJ1G8bNkP1DCoKAwi6NghEISgPyIq+nGu
+        Q0QZdIkOGhrMvPIVZpmd2S7DzoqwH3hO7/vO82Fm3ncGKFFim0EA1xX5E8AD92DQlAN4AUAbkbAGYAGo
+        ck8Kin0E3kr56LFD+ma6WQQk9e6JQdCkyGVFWg87U3pleljPtB0tmsAFRf41ImFzaaBjs7xYAvKyTROw
+        6mKG+W60J1vuEmgGUOkjEXehkyiA51KQitdY3yYv5ZRL5tqzAr5C4J/sJnexUEXgtUwabDygf2eGPOWS
+        z+P9OtN6WE+dSPhKsrZaRGQX7XeWJxT5laR1tyPpKS1kFrqO23fjiF1+TpGrFeEd5mL/Kc+CQsctsJfk
+        WjxmmG/G+vTK7SuBZ6G7NVdAkevxyt3Wh5kJvfpsPvA8HuzJ/wh2RcvMl+PDngWFTj4BIRFS6rucePMX
+        z3oWFTL/ExBqFPleBkdOtug/T+c8iyVf7mV0prtdT3WlfaWloS7vNrTZCWBRJNIHG6wfj254BO70ncke
+        Kn5Cch3ANXexk83vvljWV++xPs1O5gjM9nbaFwvkKHYyoMi1WHnUfDVxOZ9AYB8jJ8mQ4q+QUtaTod4t
+        ERBqFflRSq+2pfSt86eLLiBUAFiSYiNaJuVF/SWzUfJyhhSXAdx3D5YosS3ZAHgM/5td4m3lAAAAAElF
+        TkSuQmCC
 </value>
   </data>
 </root>
